prevent spillage from feed div

--- a/stylesheets/terminal.css
+++ b/stylesheets/terminal.css
@@ -13,13 +13,14 @@
   border-collapse:collapse;
   display : table;
 
+
+
   margin: 20px;
   width: 800px;
   border-radius: 0 0px 5px 5px;
   height: 35%;
   margin-top: 0;
   background-color: #2c3e50;
-  overflow-y: scroll;
   padding: 5px;
   font-family: Monaco, Consolas, "Lucida Console", monospace;
 }
@@ -49,6 +50,11 @@
 }
 
 .feed {
+
+  max-height: 100%;
+  overflow : auto;
+
+
   color: white;
   font-size: 15px;
 }
